--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "cookie-universal-nuxt": "^2.0.18",
     "jquery": "^3.4.1",
     "nuxt": "^2.0.0",
+    "nuxt-vue-material": "^1.2.0",
     "themify-icons": "^1.0.0",
+    "vue-material": "^1.0.0-beta-11",
     "vue-paystack": "^2.0.2",
     "vue2-datepicker": "^2.13.0",
     "web3": "^1.2.1"
