--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "cookie-universal-nuxt": "^2.0.18",
     "jquery": "^3.4.1",
+    "numeral": "^2.0.6",
     "nuxt": "^2.0.0",
     "nuxt-vue-material": "^1.2.0",
     "themify-icons": "^1.0.0",
