--- a/package.json
+++ b/package.json
@@ -12,29 +12,32 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/pwa": "^3.0.0-0",
-    "@nuxtjs/toast": "^3.2.1",
+    "@nuxtjs/axios": "^5.11.0",
+    "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "@nuxtjs/toast": "^3.3.0",
     "animate.css": "^3.7.2",
-    "bootstrap": "^4.1.3",
-    "bootstrap-vue": "^2.0.0-rc.11",
-    "cookie-universal-nuxt": "^2.0.18",
-    "jquery": "^3.4.1",
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.15.0",
+    "cookie-universal-nuxt": "^2.1.4",
+    "jquery": "^3.5.1",
+    "js-sha512": "^0.8.0",
+    "jssha": "^2.4.2",
     "numeral": "^2.0.6",
-    "nuxt": "^2.0.0",
+    "nuxt": "^2.12.2",
     "nuxt-vue-material": "^1.2.0",
     "themify-icons": "^1.0.0",
-    "vue-material": "^1.0.0-beta-11",
+    "vue-material": "^1.0.0-beta-14",
     "vue-paystack": "^2.0.2",
-    "vue2-datepicker": "^2.13.0",
+    "vue2-datepicker": "^2.13.4",
     "vuejs-datepicker": "^1.6.2",
-    "web3": "^1.2.1"
+    "vuetrend": "^0.3.4",
+    "web3": "^1.2.8"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^1.0.1",
-    "@nuxtjs/eslint-module": "^1.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^6.1.0",
-    "eslint-plugin-nuxt": ">=0.4.2"
+    "@nuxtjs/eslint-module": "^1.2.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-nuxt": "^1.0.0"
   }
 }
