--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@nuxtjs/eslint-module": "^1.2.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
-    "eslint-plugin-nuxt": "^1.0.0"
+    "eslint-plugin-nuxt": "^1.0.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.1"
   }
 }
