--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "cookie-universal-nuxt": "^2.1.4",
+    "iview": "^3.5.4",
     "jquery": "^3.5.1",
     "js-sha512": "^0.8.0",
     "jssha": "^2.4.2",
@@ -26,8 +27,10 @@
     "nuxt": "^2.12.2",
     "nuxt-vue-material": "^1.2.0",
     "themify-icons": "^1.0.0",
+    "vue": "^2.6.11",
     "vue-material": "^1.0.0-beta-14",
     "vue-paystack": "^2.0.2",
+    "vue-server-renderer": "^2.6.11",
     "vue2-datepicker": "^2.13.4",
     "vuejs-datepicker": "^1.6.2",
     "vuetrend": "^0.3.4",
