--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nuxt-vue-material": "^1.2.0",
     "themify-icons": "^1.0.0",
     "vue": "^2.6.11",
+    "vue-country-code": "^1.1.1",
     "vue-material": "^1.0.0-beta-14",
     "vue-paystack": "^2.0.2",
     "vue-server-renderer": "^2.6.11",
